docs: enhance README.md with expanded Table of Contents, detailed examples, and performance comparison charts for benchmarks